:fire: Remove emissions parts of ocean

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -17,8 +17,8 @@
 # DATA_DIR=../../data
 
 # Reference date for currency exchange rates, determines what pint context to use.
-# The rates can be updated, and a new context generated, using the notebook at `drafts/currency.ipynb`.
+# The rates can be updated, and a new context generated, using the notebook at `data/units/currency_exchange_rates.ipynb`.
 # CURRENCY_EXCHANGE_DATE=20241005
 
 # Climatiq API key. TODO pass the key set by the user via the API and remove this field.
-CLIMATIQ_API_KEY=
+# CLIMATIQ_API_KEY=
