--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,8 +10,10 @@
     "openapi-ts": "openapi-ts"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.11",
     "@ts-graphviz/node": "^0.4.2",
     "async-mutex": "^0.5.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
     "d3": "^7.8.5",
@@ -46,6 +48,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "orval": "^7.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
