:wrench: Fix default DATA_DIR in backend config

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -14,7 +14,7 @@
 # CACHED_TASK_TIMEOUT=0.5
 
 # Path to the data directory, relative to `main.py`
-# DATA_DIR=../../data
+# DATA_DIR=./data
 
 # Reference date for currency exchange rates, determines what pint context to use.
 # The rates can be updated, and a new context generated, using the notebook at `data/units/currency_exchange_rates.ipynb`.
