:passport_control: Change session authentication too cookies

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -29,4 +29,5 @@ RUN mkdir -p tmp
 ENV PYTHONPATH "${PYTHONPATH}:/app/backend"
 
 # Run FastAPI app
-CMD ["uvicorn", "index:app", "--host", "0.0.0.0"]
+CMD ["uvicorn", "index:app", "--host", "localhost:8000"]
+
