--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -154,7 +154,8 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
+openapi.json
+#
 # Pyre type checker
 .pyre/
 
@@ -170,3 +171,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+./openapi.json
