:art: Add precommit hook to backend

--- a/src/backend/.pre-commit-config.yaml
+++ b/src/backend/.pre-commit-config.yaml
@@ -3,14 +3,20 @@ repos:
     rev: v2.3.0
     hooks:
       - id: check-yaml
+        files: .*\.py$
       - id: end-of-file-fixer
+        files: .*\.py$
       - id: trailing-whitespace
+        files: .*\.py$
   - repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
       - id: black
+        files: .*\.py$
   - repo: https://github.com/pycqa/isort
     rev: 5.11.5
     hooks:
       - id: isort
         name: isort (python)
+        files: .*\.py$
+
