--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "format": "biome format . --write",
-    "openapi-ts": "openapi-ts"
+    "openapi-ts": "openapi-ts",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,json,jsonc,html,css,scss}": ["biome check --apply"]
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.11",
@@ -51,6 +55,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "orval": "^7.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
