--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,7 +12,9 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.{js,ts,tsx,jsx,json,jsonc,html,css,scss}": ["biome check --apply"]
+    "*.{js,ts,tsx,jsx,json,jsonc,html,css,scss}": [
+      "biome check --apply"
+    ]
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.11",
@@ -38,6 +40,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-select": "^5.8.0",
     "styled-components": "^6.1.1",
+    "tsx": "^4.19.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
