--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,17 +12,20 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.{js,ts,tsx,jsx,json,jsonc,html,css,scss}": [
-      "biome check --apply"
-    ]
+    "*.{js,ts,tsx,jsx,json,jsonc,html,css,scss}": ["biome check --apply"]
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.11",
+    "@tanstack/react-query-devtools": "^5.75.4",
+    "@tanstack/react-table": "^8.21.3",
     "@ts-graphviz/node": "^0.4.2",
     "async-mutex": "^0.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "debounce-promise": "^3.1.2",
     "file-saver": "^2.0.5",
@@ -31,6 +34,7 @@
     "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.507.0",
     "next": "^14.2.14",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
@@ -40,6 +44,8 @@
     "react-loading-skeleton": "^3.4.0",
     "react-select": "^5.8.0",
     "styled-components": "^6.1.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.4",
     "zustand": "^4.5.2"
   },
@@ -51,6 +57,7 @@
     "@types/debounce-promise": "^3.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.29",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^22.7.3",
     "@types/react": "^18",
