--- a/src/new-frontend/package.json
+++ b/src/new-frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:plugin": "tsx scripts/buildPlugins.tsx"
+    "generate:plugin": "tsx scripts/buildPlugins.tsx",
   },
   "dependencies": {
     "@mantine/charts": "^8.0.1",
@@ -18,6 +18,7 @@
     "@mantine/notifications": "^8.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
