--- a/src/new-frontend/package.json
+++ b/src/new-frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:plugin": "tsx scripts/buildPlugins.tsx",
+    "generate:plugin": "tsx scripts/buildPlugins.tsx"
   },
   "dependencies": {
     "@mantine/charts": "^8.0.1",
