--- a/src/new-frontend/package.json
+++ b/src/new-frontend/package.json
@@ -10,6 +10,7 @@
     "generate:plugin": "tsx scripts/buildPlugins.tsx"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.4",
     "@mantine/charts": "^8.0.1",
     "@mantine/core": "^8.0.1",
     "@mantine/dates": "^8.0.1",
@@ -18,6 +19,7 @@
     "@mantine/notifications": "^8.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "@xyflow/react": "^12.6.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.511.0",
