--- a/src/new-frontend/package.json
+++ b/src/new-frontend/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate:plugin": "tsx scripts/buildPlugins.tsx"
+    "generate:plugin": "tsx scripts/buildPlugins.tsx",
+    "generate:pluginMap": "tsx scripts/generatePlugin.ts",
+    "format": "biome format . --write"
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
@@ -19,12 +21,20 @@
     "@mantine/notifications": "^8.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "@types/react-cytoscapejs": "^1.2.5",
     "@xyflow/react": "^12.6.4",
     "clsx": "^2.1.1",
+    "cytoscape": "^3.32.0",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-elk": "^2.3.0",
+    "cytoscape-svg": "^0.4.0",
+    "dagre": "^0.8.5",
     "dayjs": "^1.11.13",
+    "elkjs": "^0.10.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3"
   },
