--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "^19.0.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
