--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@hookform/devtools": "^4.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
