--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -1,42 +1,46 @@
-[tool.poetry]
+[project]
 name = "ocean-backend"
 version = "0.9.9"
 description = ""
-authors = ["Raimund Hensen <raimund.hensen@rwth-aachen.de>"]
-package-mode = false
-repository = "https://github.com/rwth-pads/ocean"
+authors = [{ name = "Raimund Hensen", email = "raimund.hensen@rwth-aachen.de" }]
+requires-python = "~=3.10"
+dependencies = [
+    "numpy~=1.26",
+    "pm4py",
+    "pandas~=2.1",
+    "pint>=0.23,<0.24",
+    "cachetools>=5.3.2,<6",
+    "pydantic>=2.6.3,<3",
+    "pydantic-settings>=2.2.1,<3",
+    "fastapi>=0.110.0,<0.111",
+    "uvicorn>=0.28.0,<0.29",
+    "python-multipart>=0.0.9,<0.0.10",
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^1.26"
-pm4py = {git = "https://github.com/raihensen/pm4py-ocean", branch = "release"}
-pandas = "^2.1"
-pint = "^0.23"
-cachetools = "^5.3.2"
-pydantic = "^2.6.3"
-pydantic-settings = "^2.2.1"
-fastapi = "^0.110.0"
-uvicorn = "^0.28.0"
-python-multipart = "^0.0.9"
+[project.urls]
+Repository = "https://github.com/rwth-pads/ocean"
 
-[tool.poetry.group.dev.dependencies]
-jupyterlab = "^4.0.7"
-dependentspy = {git = "https://github.com/raihensen/dependentspy", branch = "main"}
-iso4 = "^0.0.2"
-seaborn = "^0.13.0"
-matplotlib = "^3.8.0"
-pre-commit = "^4.2.0"
+[dependency-groups]
+dev = [
+    "jupyterlab>=4.0.7,<5",
+    "dependentspy",
+    "iso4>=0.0.2,<0.0.3",
+    "seaborn>=0.13.0,<0.14",
+    "matplotlib>=3.8.0,<4",
+    "pre-commit>=4.2.0,<5",
+]
+
+[tool.uv]
+package = false
+
+[tool.uv.sources]
+dependentspy = { git = "https://github.com/raihensen/dependentspy", branch = "main" }
+pm4py = { git = "https://github.com/raihensen/pm4py-ocean", branch = "release" }
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 100
-exclude = ".*\\.ipynb"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 exclude = ["drafts", "data"]
 
-[tool.isort]
-profile = "black"
