--- a/src/backend/.pre-commit-config.yaml
+++ b/src/backend/.pre-commit-config.yaml
@@ -8,15 +8,14 @@ repos:
         files: .*\.py$
       - id: trailing-whitespace
         files: .*\.py$
-  - repo: https://github.com/psf/black
-    rev: 24.3.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.11.12
     hooks:
-      - id: black
-        files: .*\.py$
-  - repo: https://github.com/pycqa/isort
-    rev: 5.11.5
-    hooks:
-      - id: isort
-        name: isort (python)
-        files: .*\.py$
-
+      # Run the linter.
+      - id: ruff
+        types_or: [ python, pyi ]
+        args: [ --fix ,--config=src/backend/pyproject.toml]
+      # Run the formatter.
+      - id: ruff-format
+        types_or: [ python, pyi ]
