:technologist: Use precommit for both frontend and backend

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,11 @@ repos:
       # Run the formatter.
       - id: ruff-format
         types_or: [ python, pyi ]
+
+  - repo: https://github.com/biomejs/pre-commit
+    rev: "v0.6.1"  # Use the sha / tag you want to point at
+    hooks:
+      - id: biome-format
+        args: ["--config-path", "src/frontend/"]
+        additional_dependencies: ["@biomejs/biome@1.9.4"]
+
