--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,72 +2,43 @@
   "latex-workshop.latex.recipes": [
     {
       "name": "pdflatex ➜ BibTeX ➜ pdflatex × 2",
-      "tools": [
-        "pdflatex",
-        "bibtex",
-        "pdflatex",
-        "pdflatex"
-      ]
+      "tools": ["pdflatex", "bibtex", "pdflatex", "pdflatex"]
     },
     {
       "name": "latexmk",
-      "tools": [
-        "latexmk"
-      ]
+      "tools": ["latexmk"]
     },
     {
       "name": "latexmk (latexmkrc)",
-      "tools": [
-        "latexmk_rconly"
-      ]
+      "tools": ["latexmk_rconly"]
     },
     {
       "name": "latexmk (lualatex)",
-      "tools": [
-        "lualatexmk"
-      ]
+      "tools": ["lualatexmk"]
     },
     {
       "name": "latexmk (xelatex)",
-      "tools": [
-        "xelatexmk"
-      ]
+      "tools": ["xelatexmk"]
     },
     {
       "name": "pdflatex -> bibtex -> pdflatex * 2",
-      "tools": [
-        "pdflatex",
-        "bibtex",
-        "pdflatex",
-        "pdflatex"
-      ]
+      "tools": ["pdflatex", "bibtex", "pdflatex", "pdflatex"]
     },
     {
       "name": "Compile Rnw files",
-      "tools": [
-        "rnw2tex",
-        "latexmk"
-      ]
+      "tools": ["rnw2tex", "latexmk"]
     },
     {
       "name": "Compile Jnw files",
-      "tools": [
-        "jnw2tex",
-        "latexmk"
-      ]
+      "tools": ["jnw2tex", "latexmk"]
     },
     {
       "name": "Compile Pnw files",
-      "tools": [
-        "pnw2tex",
-        "latexmk"
-      ]
+      "tools": ["pnw2tex", "latexmk"]
     },
     {
       "name": "tectonic",
-      "tools": [
-        "tectonic"
-      ]
+      "tools": ["tectonic"]
     }
   ],
   "latex-workshop.latex.tools": [
@@ -113,9 +84,7 @@
     {
       "name": "latexmk_rconly",
       "command": "latexmk",
-      "args": [
-        "%DOC%"
-      ],
+      "args": ["%DOC%"],
       "env": {}
     },
     {
@@ -133,9 +102,7 @@
     {
       "name": "bibtex",
       "command": "bibtex",
-      "args": [
-        "%DOCFILE%"
-      ],
+      "args": ["%DOCFILE%"],
       "env": {}
     },
     {
@@ -150,10 +117,7 @@
     {
       "name": "jnw2tex",
       "command": "julia",
-      "args": [
-        "-e",
-        "using Weave; weave(\"%DOC_EXT%\", doctype=\"tex\")"
-      ],
+      "args": ["-e", "using Weave; weave(\"%DOC_EXT%\", doctype=\"tex\")"],
       "env": {}
     },
     {
@@ -168,33 +132,21 @@
     {
       "name": "pnw2tex",
       "command": "pweave",
-      "args": [
-        "-f",
-        "tex",
-        "%DOC_EXT%"
-      ],
+      "args": ["-f", "tex", "%DOC_EXT%"],
       "env": {}
     },
     {
       "name": "pnw2texminted",
       "command": "pweave",
-      "args": [
-        "-f",
-        "texminted",
-        "%DOC_EXT%"
-      ],
+      "args": ["-f", "texminted", "%DOC_EXT%"],
       "env": {}
     },
     {
       "name": "tectonic",
       "command": "tectonic",
-      "args": [
-        "--synctex",
-        "--keep-logs",
-        "%DOC%.tex"
-      ],
+      "args": ["--synctex", "--keep-logs", "%DOC%.tex"],
       "env": {}
-    },
+    }
   ],
   "editor.wordWrap": "on",
   "latex-workshop.latex.autoBuild.run": "never",
