--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,44 @@
-version: '3.8'
-
 services:
   backend:
+    # Build the image from the Dockerfile in the current directory
     build:
-      context: .
-      dockerfile: ./src/backend/dev.Dockerfile
-    working_dir: /app
-    volumes:
-      - ./src/backend:/app
-      - ./src/backend/data:/app/data:ro
+      context: ./src/backend/
+      dockerfile: dev.Dockerfile
+    # Host the FastAPI application on port 8000
     ports:
       - "8000:8000"
-    environment:
-      - PYTHONPATH=/app
-    command: uvicorn index:app --host 0.0.0.0 --port 8000 --reload
+    develop:
+      # Create a `watch` configuration to update the app
+      # https://docs.docker.com/compose/file-watch/#compose-watch-versus-bind-mounts
+      watch:
+        # Sync the working directory with the `/app` directory in the container
+        - action: sync
+          path: ./src/backend
+          target: /app
+          # Exclude the project virtual environment — it could be for a
+          # different platform in the container
+          ignore:
+            - .venv/
 
-volumes:
-  frontend-node-modules:
-  frontend-build:
-  backend-data:
+        # Rebuild the image if dependencies change by checking uv.lock
+        - action: rebuild
+          path:  ./src/backend/uv.lock
+  frontend:
+      build:
+        context: ./src/frontend
+        dockerfile: dev.Dockerfile  # Optional: or default to Dockerfile
+      ports:
+        - "3000:3000"
+      environment:
+        - NODE_ENV=development
+      develop:
+        watch:
+          - action: sync
+            path: ./src/frontend
+            target: /app
+            ignore:
+              - node_modules/
+              - .next/
+          - action: rebuild
+            path: ./src/frontend/package-lock.json
+
