--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -5,16 +5,16 @@ description = ""
 authors = [{ name = "Raimund Hensen", email = "raimund.hensen@rwth-aachen.de" }]
 requires-python = "~=3.10"
 dependencies = [
-    "numpy~=1.26",
-    "pm4py",
-    "pandas~=2.1",
-    "pint>=0.23,<0.24",
-    "cachetools>=5.3.2,<6",
-    "pydantic>=2.6.3,<3",
-    "pydantic-settings>=2.2.1,<3",
-    "fastapi>=0.110.0,<0.111",
-    "uvicorn>=0.28.0,<0.29",
-    "python-multipart>=0.0.9,<0.0.10",
+  "numpy~=1.26",
+  "pm4py",
+  "pandas~=2.1",
+  "pint>=0.23,<0.24",
+  "cachetools>=5.3.2,<6",
+  "pydantic>=2.6.3,<3",
+  "pydantic-settings>=2.2.1,<3",
+  "fastapi[standard]>=0.112.2",
+  "uvicorn>=0.28.0,<0.29",
+  "python-multipart>=0.0.9,<0.0.10",
 ]
 
 [project.urls]
@@ -22,12 +22,12 @@ Repository = "https://github.com/rwth-pads/ocean"
 
 [dependency-groups]
 dev = [
-    "jupyterlab>=4.0.7,<5",
-    "dependentspy",
-    "iso4>=0.0.2,<0.0.3",
-    "seaborn>=0.13.0,<0.14",
-    "matplotlib>=3.8.0,<4",
-    "pre-commit>=4.2.0,<5",
+  "jupyterlab>=4.0.7,<5",
+  "dependentspy",
+  "iso4>=0.0.2,<0.0.3",
+  "seaborn>=0.13.0,<0.14",
+  "matplotlib>=3.8.0,<4",
+  "pre-commit>=4.2.0,<5",
 ]
 
 [tool.uv]
