--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
-    "@mantine/charts": "^8.0.1",
-    "@mantine/core": "^8.0.1",
-    "@mantine/dates": "^8.0.1",
-    "@mantine/dropzone": "^8.0.1",
-    "@mantine/hooks": "^8.0.1",
-    "@mantine/notifications": "^8.0.1",
+    "@mantine/charts": "^8.1.1",
+    "@mantine/core": "^8.1.1",
+    "@mantine/dates": "^8.1.1",
+    "@mantine/dropzone": "^8.1.1",
+    "@mantine/hooks": "^8.1.1",
+    "@mantine/notifications": "^8.1.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "@types/react-cytoscapejs": "^1.2.5",
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.13",
     "elkjs": "^0.10.0",
     "lucide-react": "^0.511.0",
+    "mantine-datatable": "^8.1.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-cytoscapejs": "^2.0.0",
