--- a/src/frontend/biome.json
+++ b/src/frontend/biome.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "files": {
     "ignoreUnknown": true,
-    "maxSize": 2000000
+    "maxSize": 2000000,
+    "ignore": ["api/fastapi*"]
   },
   "formatter": {
     "indentStyle": "space"
