--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "generate:plugins": "tsx scripts/generatePlugin.ts",
+    "generate:resources": "tsx scripts/generateResources.ts",
     "generate:api": "npx orval",
     "generate": "npm run generate:plugins && npm run generate:api",
     "format": "biome format . --write"
