--- a/src/frontend/biome.json
+++ b/src/frontend/biome.json
@@ -32,7 +32,12 @@
     }
   },
   "linter": {
-    "enabled": false
+    "rules": {
+      "recommended": false,
+      "correctness": {
+        "noUnusedImports": "error"
+      }
+    }
   },
   "organizeImports": {
     "enabled": true
