--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "biome lint . --write",
     "generate:plugins": "tsx scripts/generatePlugins.ts && tsx scripts/syncPublicFolder.ts",
     "generate:resources": "tsx scripts/generateResources.ts",
     "generate:api": "npx orval",
