:building_construction: Rename plugins to modules in frontend

--- a/src/frontend/biome.json
+++ b/src/frontend/biome.json
@@ -3,7 +3,7 @@
   "files": {
     "ignoreUnknown": true,
     "maxSize": 2000000,
-    "ignore": ["api/fastapi*", "plugins/pluginMap.ts"]
+    "ignore": ["api/fastapi*", "plugins/pluginMap.ts", "shemas/*"]
   },
   "formatter": {
     "indentStyle": "space"
