--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome lint . --write",
-    "generate:plugins": "tsx scripts/generatePlugins.ts && tsx scripts/syncPublicFolder.ts",
+    "generate:modules": "tsx scripts/generateModules.ts",
     "generate:resources": "tsx scripts/generateResources.ts",
     "generate:api": "npx orval",
     "generate": "npm run generate:plugins && npm run generate:api",
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@hookform/devtools": "^4.4.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
