:sparkles: First plugins structure

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,10 @@ services:
       - "8000:8000"
     volumes:
       - ./data:/app/data
+      - plugins:/app/plugins
     environment:
       - DATA_DIR=/app/data
+      - PLUGIN_DIR=/app/plugins
     develop:
       # Create a `watch` configuration to update the app
       # https://docs.docker.com/compose/file-watch/#compose-watch-versus-bind-mounts
@@ -46,3 +48,5 @@ services:
           - action: rebuild
             path: ./src/frontend/package-lock.json
 
+volumes:
+  plugins:
