--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "biome format . --write"
   },
   "dependencies": {
+    "@aokiapp/rjsf-mantine-theme": "^0.5.0",
     "@dagrejs/dagre": "^1.1.4",
     "@mantine/charts": "^8.1.1",
     "@mantine/core": "^8.1.1",
@@ -21,6 +22,10 @@
     "@mantine/dropzone": "^8.1.1",
     "@mantine/hooks": "^8.1.1",
     "@mantine/notifications": "^8.1.1",
+    "@rjsf/core": "^5.24.12",
+    "@rjsf/utils": "^5.24.12",
+    "@rjsf/validator-ajv8": "^5.24.12",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "@types/react-cytoscapejs": "^1.2.5",
@@ -33,6 +38,7 @@
     "dagre": "^0.8.5",
     "dayjs": "^1.11.13",
     "elkjs": "^0.10.0",
+    "loadash": "^1.0.0",
     "lucide-react": "^0.511.0",
     "mantine-datatable": "^8.1.2",
     "next": "15.3.2",
