--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,10 @@ services:
       - "8000:8000"
     volumes:
       - ./data:/app/data
+      - plugins_store:/app/plugin_store
     environment:
       - DATA_DIR=/app/data
+      - PLUGIN_DIR=/app/plugin_store 
     develop:
       # Create a `watch` configuration to update the app
       # https://docs.docker.com/compose/file-watch/#compose-watch-versus-bind-mounts
@@ -47,4 +49,4 @@ services:
             path: ./src/frontend/package-lock.json
 
 volumes:
-  plugins:
+  plugins_store:
